# axum-notes

./: .gitignore  Cargo.toml
migrations/: 20260408135213_create_notes.sql
src/: error.rs  handlers.rs  main.rs  models.rs
