[package]
name = "axum-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Middleware
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "timeout",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", # async runtime + TLS
    "postgres",             # Postgres driver
    "macros",               # query! and query_as! macros
    "uuid",                 # native UUID <-> Uuid mapping
    "chrono",               # native TIMESTAMPTZ <-> DateTime mapping
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
